--- a/.github/workflows/users-svc-publish.yml
+++ b/.github/workflows/users-svc-publish.yml
@@ -1,4 +1,4 @@
-name: Publish Docker Image for users-svc
+name: Publish Docker Image for Users-svc
 
 # evento
 on: [push]
@@ -33,8 +33,3 @@ jobs:
           tag_semver: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
