--- a/.github/workflows/users-svc.yml
+++ b/.github/workflows/users-svc.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: fperezb/lab-chat-frontend
+          images: fperezb/users-svc
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
