--- a/.github/workflows/users-svc-publish.yml
+++ b/.github/workflows/users-svc-publish.yml
@@ -20,13 +20,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: bryansotoastudillo/labcna-chat-frontend
+          images: bryansotoastudillo/labcna-users-svc
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./chat-frontend
-          file: ./chat-frontend/Dockerfile
+          context: ./users-svc
+          file: ./users-svc/Dockerfile
           push: true
           tag_semver: true
           tags: ${{ steps.meta.outputs.tags }}
