--- a/.github/workflows/user-srv.yml
+++ b/.github/workflows/user-srv.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./chat-user
+          context: ./users-srv
           file: ./users-srv/Dockerfile
           push: true
           tag_semver: true
