--- a/.github/workflows/user-srv.yml
+++ b/.github/workflows/user-srv.yml
@@ -1,4 +1,4 @@
-name: Publicando imagen para User-srv (Tarea4, Respuesta 1)
+name: Publicando imagen para User-srv (Tarea4, Respuesta 1 Prueba 2)
 
 
 # evento
