--- a/users-svc/Dockerfile
+++ b/users-svc/Dockerfile
@@ -10,3 +10,10 @@ RUN npm install --quiet
 
 COPY ./ ./
 
+RUN npm run build
+
+FROM nginx:stable-alpine AS build-release-stage
+
+WORKDIR /
+
+COPY --from=build-stage /usr/app/dist /usr/share/nginx/html
