--- a/.github/workflows/user-srv.yml
+++ b/.github/workflows/user-srv.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./users-svc
-          file: ./users-svc/Dockerfile
+          file: ./chat-frontend/Dockerfile
           push: true
           tag_semver: true
           tags: ${{ steps.meta.outputs.tags }}
